tambah landing page dan navigasinya disertai animasi

--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;700&family=Noto+Sans&family=PT+Sans:wght@400;700&family=Poppins:wght@400;700&family=Roboto:wght@400;500&family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choice N Click</title>
+    <link rel="stylesheet" href="./assets/styles/main.css">
+    <link rel="stylesheet" href="./assets/styles/main-page.css">
+    <link rel="stylesheet" href="./assets/styles/navigation-bar.css">
+    <link rel="stylesheet" href="./assets/styles/animation/regular-transition.css">
 </head>
 <body>
     <nav class="nav-container">
-
+        <div class="nav-menu">
+            <div class="nav-row"><a href="./"><button>Home</button></a></div>
+            <div class="nav-row"><a href="./about"><button>About</button></a></div>
+            <div class="nav-row"><a href="#"><button>Service</button></a></div>
+            <div class="nav-row"><a href="#"><button>Features</button></a></div>
+        </div>
     </nav>
     <main class="main-landing-page">
-        
+        <section class="mlp-section">
+            <header>
+                <h1 class="mlp-main-heading">Pilih-pilih dan klik!</h1>
+            </header>
+            <article class="mlp-slogan">
+                <p>Mudahkan perhitungan dagang dan bisnismu diberbagai platform secara online dimanapun kapanpun!</p>
+                <div class="mlp-button"><a href="signup"><button><div>Daftar Sekarang</div></button></a></div>
+            </article>
+        </section>
     </main>
 </body>
 </html>
