ganti slogan dan tambah nav login dan daftar

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 <body>
     <nav class="nav-container">
         <div class="nav-menu">
-            <div class="nav-row"><a href="./"><button>Home</button></a></div>
-            <div class="nav-row"><a href="./about"><button>About</button></a></div>
-            <div class="nav-row"><a href="#"><button>Service</button></a></div>
-            <div class="nav-row"><a href="#"><button>Features</button></a></div>
+            <div class="nav-row"><a href="./"><button class="nav-reg-btn">Home</button></a></div>
+            <div class="nav-row"><a href="./about"><button class="nav-reg-btn">About</button></a></div>
+            <div class="nav-row"><a href="#"><button class="nav-reg-btn">Service</button></a></div>
+            <div class="nav-row"><a href="#"><button class="nav-reg-btn">Features</button></a></div>
+        </div>
+        <div class="nav-user">
+            <div class="nav-row"><a href="./signup"><button class="nav-reg-btn">Daftar</button></a></div>
+            <div class="nav-row"><a href="./login"><button class="nav-reg-btn">Masuk</button></a></div>
         </div>
     </nav>
     <main class="main-landing-page">
@@ -28,7 +32,7 @@
                 <h1 class="mlp-main-heading">Pilih-pilih dan klik!</h1>
             </header>
             <article class="mlp-slogan">
-                <p>Mudahkan perhitungan dagang dan bisnismu diberbagai platform secara online dimanapun kapanpun!</p>
+                <p>Aplikasi kasir untuk memudahkan dagang dan bisnismu diberbagai platform secara online dimanapun kapanpun!</p>
                 <div class="mlp-button"><a href="signup"><button><div>Daftar Sekarang</div></button></a></div>
             </article>
         </section>
