memperbarui tampilan register

--- a/signup/index.html
+++ b/signup/index.html
@@ -17,14 +17,10 @@
 <body>
     <nav class="nav-container">
         <div class="nav-menu">
-            <div class="nav-row"><a href="./"><button class="nav-reg-btn">Home</button></a></div>
-            <div class="nav-row"><a href="./about"><button class="nav-reg-btn">About</button></a></div>
+            <div class="nav-row"><a href="../"><button class="nav-reg-btn">Home</button></a></div>
+            <div class="nav-row"><a href="../about"><button class="nav-reg-btn">About</button></a></div>
             <div class="nav-row"><a href="#"><button class="nav-reg-btn">Service</button></a></div>
             <div class="nav-row"><a href="#"><button class="nav-reg-btn">Features</button></a></div>
-        </div>
-        <div class="nav-user">
-            <div class="nav-row"><a href="./signup"><button class="nav-reg-btn">Daftar</button></a></div>
-            <div class="nav-row"><a href="./login"><button class="nav-reg-btn">Masuk</button></a></div>
         </div>
     </nav>
     <div class="main-bg">
