perbarui laman daftar pertama menjadi lebih interaktif

--- a/signup/index.html
+++ b/signup/index.html
@@ -33,15 +33,15 @@
                 <form action="finishing.html" method="get" class="main-form">
                     <div class="inp-row">
                         <!--<div class="inp-label"><label for="nickname">Nickname<span class="require-symbol">*</span> (Tidak boleh spasi)</label></div> -->
-                        <div class="inp-text"><input type="text" name="nickname" id="nickname" placeholder="Nickname*"></div>
+                        <div class="inp-text"><div class="inp-bg"></div><input type="text" name="nickname" id="nickname" placeholder="Nickname*"></div>
                     </div>
                     <div class="inp-row">
                         <!--<div class="inp-label"><label for="username">Nama Pengguna<span class="require-symbol">*</span></label></div> -->
-                        <div class="inp-text"><input type="text" name="username" id="username" placeholder="Nama Pengguna*"></div>
+                        <div class="inp-text"><div class="inp-bg"></div><input type="text" name="username" id="username" placeholder="Nama Pengguna*"></div>
                     </div>
                     <div class="inp-row">
                         <!--<div class="inp-label"><label for="email">Email<span class="require-symbol">*</span></label></div> -->
-                        <div class="inp-text"><input type="email" name="usermail" id="email" placeholder="Email*"></div>
+                        <div class="inp-text"><div class="inp-bg"></div><input type="email" name="usermail" id="email" placeholder="Email*"></div>
                     </div>
                     <!--
                     <div class="inp-row">
@@ -49,7 +49,7 @@
                         <div class="inp-text"><input type="tel" name="telpnum" id="telp" placeholder="No. Telp*"></div>
                     </div>
                     -->
-                    <div class="inp-sub"><button id="sub-btn" type="submit">Lanjutkan</button></div>
+                    <div class="inp-sub"><button id="sub-btn" type="button">Lanjutkan</button></div>
                     <div class="hcp-text">Sudah punya akun? <a href="../login">Login</a></div>
                 </form>
             </div>
