--- a/signup/finishing.html
+++ b/signup/finishing.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/user-signlogin-page.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/9833b8478b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main-bg">
@@ -49,7 +50,15 @@
                             <h3>Buat bisnis</h3>
                         </header>
                         <div class="inp-row">
-                            <div class="inp-text"><div class="inp-bg"></div><input type="text" name="businessname" id="bname" placeholder="Nama bisnis*"></div>
+                            <div class="inp-text"><div class="inp-bg"></div><input type="text" name="bname" id="bname" placeholder="Nama bisnis*"></div>
+                        </div>
+                        <div class="inp-row">
+                            <div class="inp-dropdown">
+                                <input type="hidden" name="btype" value="">
+                                <div class="inp-dp-text">Jenis bisnis*</div>
+                                <div class="inp-dp-da-icon"><i class="fa-solid fa-caret-down"></i></div>
+                                <div class="inp-dp-ct"></div>
+                            </div>
                         </div>
                         <div class="inp-sub-nito"><button id="sub-nito-btn" type="submit">Selanjutnya</button></div>
                     </div>
@@ -57,6 +66,6 @@
             </div>
         </div>
     </div>
-    <script src="../assets/scripts/form/form-manajement.js"></script>
+    <script type="module" src="../assets/scripts/form/form-manajement.js"></script>
 </body>
 </html>
