selesaikan form pendaftaran baut produk

--- a/signup/finishing.html
+++ b/signup/finishing.html
@@ -91,10 +91,20 @@
                                 <input type="file" name="productName" id="pname" accept="image/*">
                                 <label for="pname" class="inp-fl">
                                     <div class="inp-flog"><i class="fa-solid fa-box-archive fa-3x"></i></div>
-                                    <div class="inp-fl-t">Choice Product Image</div>
+                                    <div class="inp-fl-t">Upload Foto Produk</div>
                                 </label>
                             </div>
                         </div>
+                        <div class="inp-row">
+                            <div class="inp-text"><div class="inp-bg"></div><input type="text" name="productName" id="pname" placeholder="Nama Produk*"></div>
+                        </div>
+                        <div class="inp-row">
+                            <div class="inp-text"><div class="inp-bg"></div><input type="text" name="productName" id="pname" placeholder="Kategori Produk*"></div>
+                        </div>
+                        <div class="inp-row">
+                            <div class="inp-text"><div class="inp-bg"></div><input type="number" name="productName" id="pname" placeholder="Harga Produk*"></div>
+                        </div>
+                        <div class="inp-sub-nito"><button id="sub-nito-btn" type="submit">Mulai</button></div>
                     </div>
                 </form>
             </div>
