--- a/signup/index.html
+++ b/signup/index.html
@@ -55,6 +55,6 @@
             </div>
         </div>
     </div>
-    <script src="../assets/scripts/form/form-manajement.js"></script>
+    <script type="module" src="../assets/scripts/form/form-manajement.js"></script>
 </body>
 </html>
