tambah halaman login dan database dasar

--- a/signup/finishing.html
+++ b/signup/finishing.html
@@ -21,8 +21,8 @@
         <div class="main-form-container">
             <div class="main-form-base">
                 <header class="header-section">
-                    <h1>3 Langkah</h1>
-                    <p>Vertifikasi 3 langkah untuk memulai</p>
+                    <h1>4 Langkah</h1>
+                    <p>Vertifikasi 4 langkah untuk memulai</p>
                 </header>
                 <div class="progress-bar"></div>
                 <form action="" method="get" class="mainform">
@@ -43,6 +43,18 @@
                         </div>
                         <div class="inp-row">
                             <div class="gth-btn"><button type="button">Kirim ulang (30s)</button></div>
+                        </div>
+                        <div class="inp-sub-nito"><button id="sub-nito-btn" type="submit">Konfirmasi</button></div>
+                    </div>
+                    <div class="tb-form" id="pw-form">
+                        <header class="inp-ftg">
+                            <h3>Buat Password</h3>
+                        </header>
+                        <div class="inp-row">
+                            <div class="inp-text"><div class="inp-bg"></div><input type="text" name="npw" id="npw" placeholder="Password Baru*"></div>
+                        </div>
+                        <div class="inp-row">
+                            <div class="inp-text"><div class="inp-bg"></div><input type="text" name="cpw" id="cpw" placeholder="Konfirmasi Password*"></div>
                         </div>
                         <div class="inp-sub-nito"><button id="sub-nito-btn" type="submit">Konfirmasi</button></div>
                     </div>
@@ -81,7 +93,7 @@
                         </div>
                         <div class="inp-sub-nito"><button id="sub-nito-btn" type="submit">Selanjutnya</button></div>
                     </div>
-                    <div class="tb-form" id="cp-form">
+                    <div class="tb-form" id="cp-form" style="display: none;">
                         <header class="inp-ftg">
                             <h3>Buat Produk</h3>
                             <p>Buat produk pertama anda</p>
