--- a/login/index.html
+++ b/login/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datfar</title>
+    <title>Masuk</title>
     <link rel="stylesheet" href="../assets/styles/animation/regular-transition.css">
     <link rel="stylesheet" href="../assets/styles/navigation-bar.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
@@ -27,21 +27,17 @@
         <div class="main-form-container">
             <div class="main-form-base">
                 <header class="header-section">
-                    <h1>Daftar</h1>
-                    <p>Daftarkan dirimu untuk memulai kemudahan bisnis</p>
+                    <h1>Masuk</h1>
+                    <p>Gabung kembali untuk melanjutkan</p>
                 </header>
-                <form action="finishing.html" method="get" class="main-form">
-                    <div class="inp-row">
-                        <!--<div class="inp-label"><label for="nickname">Nickname<span class="require-symbol">*</span> (Tidak boleh spasi)</label></div> -->
-                        <div class="inp-text"><div class="inp-bg"></div><input type="text" name="nickname" id="nickname" placeholder="Nickname*"></div>
-                    </div>
-                    <div class="inp-row">
-                        <!--<div class="inp-label"><label for="username">Nama Pengguna<span class="require-symbol">*</span></label></div> -->
-                        <div class="inp-text"><div class="inp-bg"></div><input type="text" name="username" id="username" placeholder="Nama Pengguna*"></div>
-                    </div>
+                <form action="confirm.html" method="post" class="main-form">
                     <div class="inp-row">
                         <!--<div class="inp-label"><label for="email">Email<span class="require-symbol">*</span></label></div> -->
                         <div class="inp-text"><div class="inp-bg"></div><input type="email" name="usermail" id="email" placeholder="Email*"></div>
+                    </div>
+                    <div class="inp-row">
+                        <!--<div class="inp-label"><label for="email">Email<span class="require-symbol">*</span></label></div> -->
+                        <div class="inp-text"><div class="inp-bg"></div><input type="password" name="userpw" id="password" placeholder="Password*"></div>
                     </div>
                     <!--
                     <div class="inp-row">
@@ -49,8 +45,8 @@
                         <div class="inp-text"><input type="tel" name="telpnum" id="telp" placeholder="No. Telp*"></div>
                     </div>
                     -->
-                    <div class="inp-sub"><button id="sub-btn" type="button">Lanjutkan</button></div>
-                    <div class="hcp-text">Sudah punya akun? <a href="../login">Login</a></div>
+                    <div class="inp-sub"><button id="sub-btn" type="button">Login</button></div>
+                    <div class="hcp-text">Belum punya akun? <a href="../signup">Daftar</a></div>
                 </form>
             </div>
         </div>
