tambah validasi user phase-1 rev-0

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <main class="main-landing-page">
         <section class="mlp-section">
             <header>
-                <h1 class="mlp-main-heading">Pilih-pilih dan klik!</h1>
+                <h1 class="mlp-main-heading">Pilih-pilih, terus klik!</h1>
             </header>
             <article class="mlp-slogan">
-                <p>Aplikasi kasir untuk memudahkan dagang dan bisnismu diberbagai platform secara online dimanapun kapanpun!</p>
-                <div class="mlp-button"><a href="signup"><button><div>Daftar Sekarang</div></button></a></div>
+                <p>Mudahin aktivitas dagang dan bisnis kamu dalam satu aplikasi kasir diberbagai platform secara online dimanapun kapanpun!</p>
+                <div class="mlp-button"><a href="signup"><button><div>Yuk Daftar</div></button></a></div>
             </article>
         </section>
     </main>
